--- a/source-css/mylittlelistentothis.css
+++ b/source-css/mylittlelistentothis.css
@@ -1745,7 +1745,7 @@ a.author[href$="/Speedingturtle"] {
     vertical-align: bottom
     }
 a.author[href$="/Speedingturtle"]:after {
-    content: "The One-Lunged Wonder";
+    content: "The No-Lunged Wonder";
     display: block;
     font-size: 10px !important;
     letter-spacing: normal;
